--- a/velocity/src/main/webapp/WEB-INF/web.xml
+++ b/velocity/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,11 @@
             30
         </session-timeout>
     </session-config>
-    <welcome-file-list>
-        <welcome-file>home.xhtml</welcome-file>
+        <welcome-file-list>
+        <welcome-file>login.xhtml</welcome-file>
     </welcome-file-list>
+    <error-page>
+        <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+        <location>/login.xhtml</location>
+    </error-page>
 </web-app>
