--- a/velocity/pom.xml
+++ b/velocity/pom.xml
@@ -128,6 +128,7 @@
     </dependencies>
 
     <build>
+         <finalName>Velocity</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
